# chat

./: .env  Cargo.toml  README.org
client/: Cargo.toml
client/src/: .main.rs  handle_connection.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
server/: Cargo.toml
server/src/: .main.rs  handle_connection.rs  main.rs
