[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["thread-pool"]}

mio = { version = "0.8", features = ["os-poll", "net"]}

tokio = { version = "1.28", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.4"

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
